--- a/SkEditorPlus/Windows/NewOptionsWindow.xaml
+++ b/SkEditorPlus/Windows/NewOptionsWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<hc:Window x:Name="newOptionsWindow" x:Class="SkEditorPlus.Windows.NewOptionsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:hc="https://handyorg.github.io/handycontrol"
-        xmlns:local="clr-namespace:SkEditorPlus"
-        mc:Ignorable="d"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:hc="https://handyorg.github.io/handycontrol"
+	xmlns:local="clr-namespace:SkEditorPlus"
+	xmlns:data="clr-namespace:SkEditorPlus.Data" d:DataContext="{d:DesignInstance Type=data:SettingsBindings}"
+           mc:Ignorable="d"
         Title="{DynamicResource SettingsWindowTitle}" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyUp="OnKey" Background="#1c1c1c">
     <Grid>
         <TabControl 
@@ -13,7 +14,6 @@
             SelectedIndex="0" 
             TabStripPlacement="Left"
             Background="Transparent">
-
             <TabItem 
                 x:Name="GeneralTabItem" 
                 Header="{DynamicResource OptionsMenuGeneral}"
@@ -31,6 +31,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <DockPanel 
                                 x:Name="Language"
@@ -41,8 +42,8 @@
                             <hc:ComboBox 
                                     x:Name="languageComboBox" HorizontalAlignment="Left"
                                     Background="#FF1C1C1C" Width="124" SelectionChanged="OnLanguageChange" >
-                                <ComboBoxItem Content="English"/>
-                                <ComboBoxItem Content="Polski"/>
+                                <ComboBoxItem Content="English" Tag="English"/>
+                                <ComboBoxItem Content="Polski" Tag="Polski"/>
                             </hc:ComboBox>
                         </DockPanel>
                         <DockPanel 
@@ -87,9 +88,21 @@
                                     Background="#FF1C1C1C" Height="30" Click="CheckboxClicked" />
                             </hc:Badge>
                         </DockPanel>
+
+                        <DockPanel 
+                            x:Name="DocsLink"
+                            Grid.Row="5" Margin="0,0,0,15">  
+                            <TextBlock 
+                                VerticalAlignment="Center" FontFamily="Cascadia Mono"
+                                Text="{DynamicResource OptionsDocsLink}" FontSize="16" Margin="0,0,15,0" />
+                            <hc:TextBox 
+                                x:Name="docsLinkTextBox" HorizontalAlignment="Left"
+                                Text="https://docs.skunity.com/" Height="30" MinWidth="150" MaxWidth="250" TextChanged="OnDocsLinkChanged" />     
+                        </DockPanel>
+
                         <DockPanel 
                                 x:Name="UpdateSyntax"
-                                Grid.Row="5" Margin="0,0,0,5">
+                                Grid.Row="6" Margin="0,0,0,5">
                             <TextBlock 
                                     VerticalAlignment="Center" FontFamily="Cascadia Mono"
                                     Text="{DynamicResource SyntaxHighlighting}" FontSize="16" Margin="0,0,15,0" />
@@ -97,17 +110,17 @@
                                     x:Name="updateSyntaxButton" HorizontalAlignment="Left"
                                     Content="{DynamicResource Update}" Height="30" Click="UpdateSyntaxClick" />
                         </DockPanel>
+                        
                         <DockPanel 
                                 x:Name="Version"
-                                Grid.Row="6" Margin="0,0,0,5">
+                                Grid.Row="7" Margin="0,0,0,5">
                             <TextBlock x:Name="versionText" 
                                     VerticalAlignment="Center" FontFamily="Cascadia Mono"
-                                    Text="Version: 1.3.0" FontSize="16" Margin="0,0,15,0" HorizontalAlignment="Left" />
+                                    Text="Version: version" FontSize="16" Margin="0,0,15,0" HorizontalAlignment="Left" />
                         </DockPanel>
                     </Grid>
                 </Grid>
             </TabItem>
-
             <TabItem 
                 x:Name="PersonalizationTabItem" 
                 Header="{DynamicResource OptionsMenuPersonalization}"
@@ -179,9 +192,7 @@
                                     x:Name="discordRPCCheckbox" IsChecked="{Binding IsDiscordRPCEnabled}"
                                     Background="#FF1C1C1C" Height="30" Click="CheckboxClicked" />
                             <!--
-                            <hc:Badge Value="12" Text="beta" BadgeMargin="0,-14,-20,0" Height="30" Style="{DynamicResource BadgeWarning}">
-                                
-                            </hc:Badge>
+                            <hc:Badge Value="12" Text="beta" BadgeMargin="0,-14,-20,0" Height="30" Style="{DynamicResource BadgeWarning}"></hc:Badge>
                             -->
                         </DockPanel>
                     </Grid>
