--- a/SkEditorPlus/Languages/Spanish.xaml
+++ b/SkEditorPlus/Languages/Spanish.xaml
@@ -34,6 +34,7 @@
 	<system:String x:Key="OptionsMenuPersonalization">Personalización</system:String>
 	<system:String x:Key="OptionsMenuDiscord">Discord</system:String>
 	<system:String x:Key="OptionsMenuFTP">FTP</system:String>
+    <system:String x:Key="OptionsMenuAddons">Complementos</system:String>
 
 	<!-- Otros -->
 
@@ -126,12 +127,25 @@
 	<system:String x:Key="Update">Actualizar</system:String>
 	<system:String x:Key="UpdateConfirmation">Si continúas, los archivos de resaltado de sintaxis se descargarán y reemplazarán. Si has hecho algún cambio en ellos y no quieres perderlos, haz una copia.</system:String>
 	<system:String x:Key="UpdateSuccess">¡Los archivos de resaltado de sintaxis se han actualizado correctamente!</system:String>
-	<system:String x:Key="UpdateFailed">¡Error al descargar archivos de resaltado de sintaxis!\n¿Está conectado a internet?{n}{n}{0}</system:String>
-	<!-- Cosas que olvidé antes. Así que están aquí :P -->
+	<system:String x:Key="UpdateFailed">¡Error al descargar archivos de resaltado de sintaxis!{n}¿Está conectado a internet?{n}{n}{0}</system:String>
 
-	<system:String x:Key="NoResults">No encontrado</system:String>
 
-	<system:String x:Key="CloseConfirmation">El archivo no ha sido guardado. ¿Estás seguro de que quieres cerrarlo?</system:String>
+    <system:String x:Key="OptionsAddonName">Nombre:</system:String>
+    <system:String x:Key="OptionsAddonAuthor">Autor:</system:String>
+    <system:String x:Key="OptionsAddonVersion">Versión:</system:String>
+    <system:String x:Key="OptionsAddonDescription">Descripción:</system:String>
+
+    <system:String x:Key="OptionsAddonsList">Lista de complementos:</system:String>
+    <system:String x:Key="OptionsOpenAddonsFolder">Abrir la carpeta de complementos:</system:String>
+    <system:String x:Key="OptionsOpen">Abrir</system:String>
+
+    <!-- Cosas que olvidé antes. Así que están aquí :P -->
+
+    <system:String x:Key="NoResults">No encontrado</system:String>
+    <system:String x:Key="OneMatchFound">Se ha encontrado una coincidencia</system:String>
+    <system:String x:Key="EmptySearchText">¡El texto de búsqueda está vacío!</system:String>
+
+    <system:String x:Key="CloseConfirmation">El archivo no ha sido guardado. ¿Estás seguro de que quieres cerrarlo?</system:String>
 	<system:String x:Key="Attention">¡Atención!</system:String>
 	<system:String x:Key="Yeah">Sí</system:String>
 	<system:String x:Key="Cancel">Cancelar</system:String>
