--- a/SkEditorPlus/Windows/Generators/GuiGenerator.xaml
+++ b/SkEditorPlus/Windows/Generators/GuiGenerator.xaml
@@ -12,7 +12,7 @@
         <hc:TextBox x:Name="rowsTextBox" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="285" hc:TitleElement.Title="{DynamicResource GUIGenRows}" hc:InfoElement.Necessary="True" Margin="0,116,0,0" hc:InfoElement.ContentHeight="16"/>
 
 
-        <Button Content="{DynamicResource GenerateButton}" HorizontalAlignment="Left" Margin="216,285,0,0" Click="Generate" VerticalAlignment="Top"/>
+        <Button Content="{DynamicResource GenerateButton}" HorizontalAlignment="Right" Click="Generate" VerticalAlignment="Bottom" Margin="0,0,10,10"/>
         <TextBlock x:Name="howToOpenText" HorizontalAlignment="Left" Margin="10,249.5,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="32"/>
         <CheckBox x:Name="exampleItemCheckbox" Content="{DynamicResource GUIGenExampleItem}" Background="#FF1C1C1C" HorizontalAlignment="Left" Margin="10,190,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="backgroundCheckbox" Content="{DynamicResource GUIGenBackground}" Background="#FF1C1C1C" HorizontalAlignment="Left" Margin="10,217,0,0" VerticalAlignment="Top"/>
